--- a/templates/primary.hbs
+++ b/templates/primary.hbs
@@ -1,98 +1,69 @@
 <style>
-   .im1-template {
-      padding-top: 1rem;
+   @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap');
+
+   :root {
+      --font-stack: 'Inter', sans-serif;
+
+      --social-icon-width: 21pt;
+      --social-icon-height: 21pt;
+      --social-icon-gap: 4pt;
+   }
+
+   .template__paper {
+      box-shadow: 0 8px 26px #E6E6E6;
+   }
+
+   .template__content {
+      margin-top: 50px;
+   }
+   .template__profile_image {
+      background-image: url(https://randomuser.me/api/portraits/women/63.jpg); 
+   }
+   .template__primary_info {
+      margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+   }
+
+   .template__username {
+      color: #555;
+   }
+   .template__bio {
+      width: 70%;
       text-align: center;
-      height: 100%;
-      color: white;      
    }
 
-   .im1-template__img-container {
-      position: relative;
-      z-index: 500;
-      width: 80px;
-      height: 80px;
+   .template__social-refs {
+      flex-direction: row;
+      justify-content: center;
+   }
+
+   .template__social-ref {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 42px;
+      height: 42px;
       border-radius: 50%;
-      margin-top: 0%;
-      margin-left: auto;
-      margin-right: auto;
-      background-color: black;
-      border: 5px solid #FFFFFF;
-   }
-   .im1-template__profile-image {
-      width: 100%;
-      height: 100%;
-      border-radius: inherit;
-   }
-
-   .im1-template__profile-info {
-      z-index: 100;
-      transform: translateY(-40%);
-      width: 75%;
-      padding-left: 10px;
-      padding-right: 10px;
-      padding-top: 40px;
-      margin-left: auto;
-      margin-right: auto;
-      background-color: #000000;
-      border-radius: 12px;
-   }
-   .im1-template__profile-username {
-      font-size: 12px;
-      color: #FFFFFF;
-   }
-   .im1-template__profile-bio {
-      color: #000000;
-      margin-top: 0px;
-      padding: 0 35px;
-      font-size: 12px;
-      line-height: 1.2;
-   }
-   .im1-template__custom-link {
-      text-align: left;
-      padding: 5px 25px;
-      margin-bottom: 5px;
-   }
-   .im1-template__custom-link .im1-template_custom-link-title{
-      font-size: 14px;
-      margin: 0%;
-      padding: 0%;
-      line-height: 0;
-      color: #000000;
-   }
-   .im1-template__custom-link .im1-template_custom-link-description {
-      font-size: 12px;
-      padding: 0%;
-      margin-top: 12px;
-      line-height: 1.2;
-      color: #5B5B5B;
-   }
-   .im1-template__social-icon{
-      margin-top: 5px;
+      transition: background-color 120ms linear;
    }
 </style>
 
-<div data-template-name="primary" class="im1-template">
-   <div class="im1-template__img-container">
-      <img class="im1-template__profile-image" src="https://randomuser.me/api/portraits/med/women/65.jpg" alt="" />
-   </div>
-   <div class="im1-template__profile-info">
-      <a class="im1-template__profile-username">@{{ user.name }}</a>
-      <div class="im1-template__social-links">
-         {{#each socialLinks}}
-            <a href="{{ this.link }}">
-               <img class="im1-template__social-icon" src="{{ this.icon }}" alt="" />
-            </a>
-         {{/each}}
-      </div>
-   </div>
-   <p class="im1-template__profile-bio">{{ profile.bio }}</p>
+<div class="template__content">
+   <div class="template__profile_image"></div>
+   <div class="template__primary_info">
+      <h3 class="template__fullname">{{ user.fullname }}</h3>
+      <h6 class="template__username">@{{ user.username }}</h6>
 
-   {{#each customLinks}}
-      <a href="{{ this.url }}">
-         <div class="im1-template__custom-link">
-            <h2 class="im1-template_custom-link-title">{{ this.title }}</h2>
-            <p class="im1-template_custom-link-description">{{ this.description }}</p>
-         </div>
-      </a>
-   {{/each}}
+      <p class="template__bio">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+   </div>
+
+   <nav class="template__social-refs">
+      {{#each social}}
+         <a class="template__social-ref" href="{{ this.link }}" target="_blank">
+            {{{ socialIcon this.socialServiceKey }}}
+         </a>
+      {{/each}}
+   </nav>
 </div>
