--- a/templates/primary.hbs
+++ b/templates/primary.hbs
@@ -1,69 +1,28 @@
-<style>
-   @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap');
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap" />
+{{!-- <page-root> --}}
+   <page-content>
 
-   :root {
-      --font-stack: 'Inter', sans-serif;
+      <!-- Profile view -->
+      <page-user-avatar src="https://randomuser.me/api/portraits/women/11.jpg"></page-user-avatar>
+      <page-user-profile fullname="{{ user.fullname }}" bio="{{ user.bio }}">
+      </page-user-profile>
 
-      --social-icon-width: 21pt;
-      --social-icon-height: 21pt;
-      --social-icon-gap: 4pt;
-   }
+      <!-- Socials -->
+      <page-socials>
+         {{#each social }}
+         <page-social-link :icon="{{ this.socialServiceKey }}" link="{{ this.link }}"></page-social-link>
+         {{/each}}
+      </page-socials>
 
-   .template__paper {
-      box-shadow: 0 8px 26px #E6E6E6;
-   }
-
-   .template__content {
-      margin-top: 50px;
-   }
-   .template__profile_image {
-      background-image: url(https://randomuser.me/api/portraits/women/63.jpg); 
-   }
-   .template__primary_info {
-      margin-top: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-   }
-
-   .template__username {
-      color: #555;
-   }
-   .template__bio {
-      width: 70%;
-      text-align: center;
-   }
-
-   .template__social-refs {
-      flex-direction: row;
-      justify-content: center;
-   }
-
-   .template__social-ref {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 42px;
-      height: 42px;
-      border-radius: 50%;
-      transition: background-color 120ms linear;
-   }
-</style>
-
-<div class="template__content">
-   <div class="template__profile_image"></div>
-   <div class="template__primary_info">
-      <h3 class="template__fullname">{{ user.fullname }}</h3>
-      <h6 class="template__username">@{{ user.username }}</h6>
-
-      <p class="template__bio">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-   </div>
-
-   <nav class="template__social-refs">
-      {{#each social}}
-         <a class="template__social-ref" href="{{ this.link }}" target="_blank">
-            {{{ socialIcon this.socialServiceKey }}}
-         </a>
-      {{/each}}
-   </nav>
-</div>
+      <!-- Custom links -->
+      <page-custom-links>
+         {{#each links }}
+            <page-custom-link 
+               title="{{this.title}}"
+               desc="{{this.description}}" 
+               link="{{this.href}}">
+            </page-custom-link>
+         {{/each}}
+      </page-custom-links>
+   </page-content>
+{{!-- </page-root> --}}
