--- a/templates/layouts/main.layout.hbs
+++ b/templates/layouts/main.layout.hbs
@@ -5,12 +5,12 @@
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <link rel="stylesheet" href="http://localhost:8000/css/master.css" />
-   <link rel="stylesheet" href="http://localhost:8000/css/default_vars.css" />
-   <link rel="stylesheet" href="http://localhost:8000/css/default.css" />
-   <script src="http://localhost:8000/js/icons.js"></script>
-   <script src="http://localhost:8000/js/page.js" type="module" onload="init()"></script>
-   <title>im1</title>
+   <link rel="stylesheet" href="/_/static/page/css/master.css" />
+   <link rel="stylesheet" href="/_/static/page/css/default_vars.css" />
+   <link rel="stylesheet" href="/_/static/page/css/default.css" />
+   <script src="/_/static/page/js/icons.js"></script>
+   <script src="/_/static/page/js/page.js" type="module" onload="init()"></script>
+   <title>imone</title>
 </head>
 
 <body class="page__body">
