--- a/templates/layouts/main.layout.hbs
+++ b/templates/layouts/main.layout.hbs
@@ -18,7 +18,7 @@
    <meta name="description" content="See my personal link page" />
    {{/if}}
 
-   <meta property="og:title" content="iamnoe" />
+   <meta property="og:title" content="iamone" />
    <meta property="og:site_name" content="iamone" />
    <meta property="og:type" content="website" />
    <meta property="og:url" content="https://iamone.link" />
