--- a/public/site.css
+++ b/public/site.css
@@ -14,7 +14,14 @@ body {
 
 .x-header {
    height: 56pt;
-   border-bottom: 2px solid var(--accents-1);
+   position: absolute;
+   backdrop-filter: blur(8px);
+   -webkit-backdrop-filter: blur(12px);
+   top: 0;
+   left: 0;
+   right: 0;
+   z-index: 200;
+   background-color: rgba(255, 255, 255, 0.7);
 }
 .x-header-content {
    width: 76%;
@@ -41,8 +48,9 @@ body {
 
 .x-hero {
    position: relative;
-   height: calc(100vh - 56pt);
-   /* background-color: aquamarine; */
+   height: calc(100vh);
+   background-image: url('/_/static/bg.png');
+   background-attachment: fixed;
 }
 
 .x-username-claim-input {
@@ -50,7 +58,7 @@ body {
    border-radius: 50px;
    padding-left: var(--gap);
    padding-right: var(--gap-half);
-   border: 3px solid var(--accents-2);
+   border: 3px solid var(--accents-1);
 }
 .x-hero-quote-text {
    font-size: 4rem;
@@ -65,6 +73,7 @@ body {
    border: none;
    outline: none;
    font-size: 13pt;
+   background-color: transparent;
 }
 .x-username-claim-input-controller::placeholder {
    color: var(--accents-3);
@@ -78,9 +87,8 @@ body {
    bottom: 2rem;
 }
 .x-hero-scroll-bottom-icon .x-icon {
-   fill: var(--accents-4);
+   fill: var(--accents-5);
 }
-
 
 .x-app-features {
    background-color: var(--foreground);
@@ -110,3 +118,14 @@ body {
    }
 }
 
+.x-footer {
+   width: 76%;
+}
+.x-footer-logo-image {
+   height: 32px;
+}
+.x-footer-social-link .x-icon {
+   width: 20pt;
+   height: 20pt;
+   fill: var(--accents-3);
+}
