--- a/public/site.css
+++ b/public/site.css
@@ -49,7 +49,9 @@ body {
 .x-hero {
    position: relative;
    height: calc(100vh);
-   background-image: url('/_/static/bg.png');
+   background-image: url('/_/static/bg.jpg');
+   background-repeat: no-repeat;
+   background-size: 100% 100%;
    background-attachment: fixed;
 }
 
