--- a/templates/layouts/main.layout.hbs
+++ b/templates/layouts/main.layout.hbs
@@ -54,6 +54,8 @@
          </a>
       </div>
    </div>
+
+   <div class="page__blink-area"></div>
 </body>
 
 <script src="/js/page/render.js"></script>
