--- a/templates/default.hbs
+++ b/templates/default.hbs
@@ -1,9 +1,6 @@
 <!-- User avatar -->
 <div class="page__user-avatar" aria-label="User Avatar">
-   <img 
-      class="page__user-avatar-image" 
-      src="{{ options.host }}/_/api/user/image/{{ user.image }}?seed={{ user.username }}" 
-      alt="{{ user.username }}" />
+   <img class="page__user-avatar-image" src="{{ options.host }}/_/api/user/image/{{ user.image }}?seed={{ user.username }}" alt="{{ user.username }}" />
 </div>
 
 <!-- User primary information -->
@@ -15,7 +12,14 @@
    {{/if}}
 
    {{#unless user.emailVerified }}
-   <div class="page__user-unverified-label"><p><small>Unverified Profile</small></p></div>
+   <div class="page__user-unverified-label" data-page-tooltip="This profile has not verified their email. If you own this profile, you can go to app.iamone.link and verify it.">
+      <p>
+         <small>Unverified Profile</small>
+         <svg xmlns="http://www.w3.org/2000/svg" width="12.4" height="12.4" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
+            <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z" />
+         </svg>
+      </p>
+   </div>
    {{/unless}}
 
    <p class="page__user-profile-bio">{{ user.bio }}</p>
