--- a/templates/default.layout.hbs
+++ b/templates/default.layout.hbs
@@ -5,7 +5,7 @@
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <base href="https://static.iamone.link" />
+   <base href="http://localhost:8000" />
 
    {{#if user.image}}
    <link rel="shortcut icon" href="{{ options.host }}/_/api/user/image/{{ user.image }}" type="image/x-icon" />
@@ -29,14 +29,10 @@
    <meta property="og:description" content="Create your personal link page." />
    <meta name="application-name" content="iamone" />
 
-   <link rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap" />
-   <link rel="stylesheet" href="/css/page/vars.css" />
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap" />
    <link rel="stylesheet" href="/css/page/master.css" />
    <link rel="stylesheet" href="/css/page/default.css" />
-   <style lang="css" type="text/css">
-      {{ css }}
-   </style>
+   <style lang="css" type="text/css">{{ css }}</style>
    <script src="/js/page/icons.js"></script>
    {{#if page.title }}
    <title>{{ page.title }}</title>
