--- a/templates/default.layout.hbs
+++ b/templates/default.layout.hbs
@@ -5,7 +5,7 @@
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <base href="http://localhost:8000" />
+   <base href="https://static.iamone.link" />
 
    {{#if user.image}}
    <link rel="shortcut icon" href="{{ options.host }}/_/api/user/image/{{ user.image }}" type="image/x-icon" />
