--- a/templates/default.hbs
+++ b/templates/default.hbs
@@ -1,6 +1,10 @@
 <!-- User avatar -->
 <div class="page__user-avatar" aria-label="User Avatar">
-   <img class="page__user-avatar-image" src="{{ options.host }}/_/api/user/image/{{ user.image }}?seed={{ user.username }}" alt="{{ user.username }}" />
+   {{#if user.imageHash}}
+   <img class="page__user-avatar-image" src="https://ipfs.infura.io:5001/api/v0/cat?arg={{ user.imageHash }}" alt="{{ user.username }}" />
+   {{else}}
+   <img class="page__user-avatar-image" src="https://avatars.dicebear.com/api/initials/:{{ user.username }}.svg?chars=1" alt="{{ user.username }}" />
+   {{/if}}
 </div>
 
 <!-- User primary information -->
@@ -28,8 +32,8 @@
 <!-- Socials -->
 <div class="page__socials" aria-label="Socials">
    {{#each social}}
-   <a class="page__social" href="{{ this.link }}" title="{{ this.label }}" target="_blank">
-      <span class="page__social-icon" data-page-icon="{{ this.socialServiceKey }}"></span>
+   <a class="page__social" href="{{ this.href }}" title="{{ this.label }}" target="_blank">
+      <span class="page__social-icon" data-page-icon="{{ this.platformKey }}"></span>
    </a>
    {{/each}}
 </div>
